Update tree-sitter grammar

--- a/tree-sitter-jacy/package.json
+++ b/tree-sitter-jacy/package.json
@@ -27,5 +27,9 @@
   "devDependencies": {
     "tree-sitter-cli": "0.19.5",
     "nan": "*"
-  }
+  },
+  "tree-sitter": [{
+    "scope": "source.jc",
+    "file-types": ["jc"]
+  }]
 }
