--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ cmake*
 .idea
 build
 
-# This file you can use to run some quick checks
+# Self file you can use to run some quick checks
 src/check.cpp
